Added Silero VAD based on DNN and performed a global refactoring of the project.

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="sample_rate">Sample Rate:</string>
+    <string name="modelType">Model:</string>
     <string name="frame_size">Frame Size:</string>
     <string name="mode">Mode:</string>
 </resources>
